# sbpl_demos

./: CMakeLists.txt  CMakeLists.txt~  package.xml  readme.md  setup.py
action/: RoconMoveArm.action  RoconPick.action  RoconRobotiq.action
config/pr2/: levine_4th_floor_config.yaml  move_base.xml  planning_pipeline.launch.xml  sbpl_planning2.yaml  sbpl_planning_pipeline.launch.xml
data/: lab_octomap_20170406.bt  lab_octomap_20170418.bt  lab_octomap_20171113.bt  sbpl_full_clean.pgm  sbpl_full_clean.yaml  sbpl_full_clean_cropped.pgm  sbpl_full_clean_cropped_without_roman.pgm  sbpl_full_clean_edit.pgm  sbpl_full_lab.pgm  sbpl_full_lab.yaml  sbpl_lab.pgm  sbpl_lab.yaml
data/grasp_database/: 003_cracker_box  006_mustard_bottle.yaml  010_potted_meat_can.yaml  019_pitcher_base  dummy.yaml  grasp_database.yaml  roman_grasp_db.json
doc/: pr2_tf_tree
launch/pr2/: alan1_2dmap_setup.launch  alan1_2dnav_setup.launch  alan1_3dmap_setup.launch  alan1_amcl_setup.launch  alan1_kinect_setup.launch  alan1_moveit_setup.launch  alan2_3dnav_setup.launch  demo.launch  planning_context.launch  pr2_acml.launch  pr2_grasp_offset.launch  pr2_indiv_no_kinect.launch  pr2_kinect.launch  pr2_loop_planner.launch  pr2_move_group_ompl.launch  pr2_move_group_sbpl.launch  pr2_navigation.launch  pr2_openni_head.launch  pr2_remappings.launch  pr2_sensor_manager.launch  pr2_start_demo_servers.launch  tatooine_ar_setup.launch  tatooine_moveit_setup.launch
launch/roman/: am4_asus.launch  roman_asus_indiv.launch  roman_asus_indiv_no_kinect.launch  roman_grasp_offset.launch  roman_map_setup.launch
screen_configs/: screenrc.common  screenrc_alan1  screenrc_alan1~  screenrc_alan2  screenrc_dagobah  screenrc_dagobah~  screenrc_pr2_commander  screenrc_roman_commander  screenrc_roman_commander~  screenrc_tatooine  screenrc_tatooine~
scripts/: FindARTag.py  __init__.py  pr2_get_r_arm_pose.py  pr2_move_base.py  pr2_move_r_arm_to_target.py  pr2_tf_lookup_client.py  pr2_torso_client.py  simple_grip_AR.py  tf_lookup_server.py
scripts/examples/: frames.gv  pose_service_test.py  pr2_get_l_arm_pose.py  pr2_get_r_arm_pose.py  pr2_gripper_client.py  pr2_joint_trajectory_action.py  pr2_move_base.py  pr2_move_head_client.py  pr2_move_l_arm_to_target.py  pr2_move_r_arm_to_target.py  pr2_moveit_smpl_test.py  pr2_read_joint_states_client.py  pr2_simple_grasp_task.py  pr2_tf_lookup_client.py  pr2_torso_client.py  pr2_tuck_arms.py  roman_follow_joint_trajectory.py  roman_grasp_db.json  roman_move_arm_client.py  roman_move_perch.py  roman_move_perch.py~  roman_move_to_home.py  roman_move_to_home.py~  roman_test_trajectory.py  roman_torso_forward.py  simple_grip_AR.py  test_pr2_rocon_moveit.py
scripts/multi_robot_demos/: pr2_commander_roman_rocon_handoff.py  roman_pr2_hardcoded_handoff.py
scripts/nodes/: demo_initializer.py  octomap_clearer.py  path_octomap_clearer.py  pr2_moveit_rocon_node.py  roman_asus_state_publisher.py  roman_rocon_actions_node.py  (+1 more)
src/: joint_states_listener.py  pose_upsample_node.cpp  pose_upsample_node_perchEnabled.cpp  pr2_rocon_marker_publisher.cpp
srv/: PoseUpsample.srv  StateMachine.srv  TfLookup.srv
ws_setup/: alan1.rosinstall  pr2_commander.rosinstall  roman_commander.rosinstall  ws_setup_instructions.txt  ws_setup_instructions_pr2.txt  ws_setup_instructions_roman.txt
(+58 files in other folders)
